# Django_project

./: .gitignore  README.md  pyproject.toml
mini_shop/: db.sqlite3
mini_shop/main/: admin.py  models.py  serializers.py  urls.py  views.py
mini_shop/main/migrations/: 0001_initial.py  0002_shop_organization_id_alter_shop_index_and_more.py  0003_alter_shop_is_deleted_alter_shop_organization.py
mini_shop/mini_shop/: settings.py  urls.py  yasg.py
